цвета иконок для разных типов файлов (тест)

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -335,6 +335,11 @@
           <label for="lightThame_chekcbox"><p>Light theme</p></label>
         </div>
 
+        <div style="position: absolute; top: 50px; left: 15px;">
+          <input type="checkbox" class="custom-checkbox top_checkBox" id="file_icons_chekcbox" name="file_icons_chekcbox" value="yes" onchange="checkBox_file_icons(this)">
+          <label for="file_icons_chekcbox"><p>Colored file icons (experemental)</p></label>
+        </div>
+
       </div>
 
       <!--версия-->
