--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -153,6 +153,11 @@
           <label for="lightThame_chekcbox"><p style="white-space: nowrap;">Light theme</p></label>
         </div>
 
+        <div style="position: absolute; top: 50px; left: 15px;">
+          <input type="checkbox" class="custom-checkbox top_checkBox" id="file_icons_chekcbox" name="file_icons_chekcbox" value="yes" onchange="checkBox_file_icons(this)">
+          <label for="file_icons_chekcbox"><p style="white-space: nowrap;">Colored file icons (experemental)</p></label>
+        </div>
+
       </div>
 
     </div>
