--- a/app/static/css/leftBar.1.css
+++ b/app/static/css/leftBar.1.css
@@ -56,12 +56,11 @@
 .small_button_style {
   position: absolute;
   height: 35px;
-
   border-radius: 8px;
   border: 1px solid var(--main-border-color);
   background-color: var(--hover-color);
-
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .small_button_style:hover {
@@ -101,4 +100,33 @@
 
 .button_exit_style:hover {
   background-color: var(--top-red_color);
+}
+
+/*----------------------------------------------------------------------------*/
+
+.settings_name {
+  margin: 0px 8px;
+  padding-top: 10px;
+  padding-bottom: 8px;
+  height: 15px;
+}
+
+.settings_element {
+  margin: 0px 15px;
+  padding-top: 0px;
+  padding-bottom: 8px;
+}
+
+.settings_element * {
+  margin: 0px;
+}
+
+.settings_element_button {
+  position: relative;
+  margin: 0px 10px;
+  margin-bottom: 5px;
+  padding-top: 0px;
+  padding-bottom: 8px;
+  height: 25px;
+  width: calc(var(--width-left-bar) - 20px);
 }
