обновил переименование файла

--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -223,7 +223,7 @@
         <!--иконка и имя файла-->
         <div class="file_ico_name_div">
           <img id="file_icon" class="icon" style="margin: 10px 10px" width="40" height="40" src="static/img/files/file.svg">
-          <input id="fileName_input" class="input_style fileName_input" style="" type=text placeholder="file name" onkeypress="return rename_file_enter(event)">
+          <input id="fileName_input" class="app_input_ok input_style fileName_input" style="" type=text placeholder="file name" onkeypress="return rename_file_enter(event)">
         </div>
 
         <!--информация о файле-->
