--- a/app/static/css/mobile/file.1.css
+++ b/app/static/css/mobile/file.1.css
@@ -48,3 +48,5 @@
   background-color: var(--fileList-delimiter-color);
   border-right: 3px solid var(--fileList-checkbox-delimiter-color);
 }
+
+/*----------------------------------------------------------------------------*/
