--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -339,20 +339,20 @@
         </div>
 
         <p class="settings_name">User</p>
-        <div id="" class="settings_element_button small_button_style block_select button_margin" style="" onclick="()">
+        <div id="" class="settings_element_button small_button_style block_select button_margin" style="" onclick="change_login_dialog()">
           <img class="icon" width="20" height="20" src="static/img/user.svg">
           <p>change login</p>
         </div>
-        <div id="" class="settings_element_button small_button_style block_select button_margin" onclick="()">
+        <div id="" class="settings_element_button small_button_style block_select button_margin" onclick="change_password_dialog()">
           <img class="icon" width="20" height="20" src="static/img/admin/login.svg">
           <p>change password</p>
         </div>
 
-        <p class="settings_name">Other</p>
+        <!-- <p class="settings_name">Other</p>
         <div class="settings_element">
           <input type="checkbox" class="custom-checkbox top_checkBox" id="save_in_server_chekcbox" name="save_in_server_chekcbox" value="yes" onchange="(this)">
           <label for="save_in_server_chekcbox"><p>Save settings in server</p></label>
-        </div>
+        </div> -->
 
       </div>
 
@@ -375,8 +375,8 @@
     <!--кнопка для открытия настроек-->
     <div id="user_button" class="user_button_no_selected_color user_button block_select button_margin" onclick="open_close_user_button()">
       <img id="user_avatar" class="icon_topBar" style="margin: 0px 15px" width="25" height="25" src="static/img/user.svg">
-      <p class="top_bar_font_color" id="user_status" style="margin: -22px 45px; color: #959DA5; font-size: 1em">user</p>
-      <p class="top_bar_font_color" id="user_name" style="margin: 15px 45px">100LAR</p>
+      <p class="top_bar_font_color" id="user_status" style="margin: -22px 45px; color: #959DA5; font-size: 1em"></p>
+      <p class="top_bar_font_color" id="user_name" style="margin: 15px 45px">Loading...</p>
       <img id="user_button_triangle" class="icon_topBar" style="position:absolute; right: 10px; top: 10px" width="10" height="10" src="static/img/triangle.svg">
     </div>
 
@@ -392,6 +392,66 @@
     <div id="dialog_bg" class="dialog_backgound" onclick="close_dialogs()"></div>
 
     <!--диалоговые окна-->
+
+    <!-- Изменение логина -->
+    <div id="dialog_change_login" class="dialog_style" style="height: 180px;">
+      <div class="dialog_top_name">
+        <div class="dialog_close_button block_select button_margin" onclick="close_change_login_dialog()">
+          <img class="icon" width="20" height="20" src="static/img/cross.svg">
+          <p>close</p>
+        </div>
+      </div>
+
+      <div class="dialog_info">
+        <img class="icon" style="position: absolute; left: 10px; top: 10px;" width="40" height="40" src="static/img/user.svg">
+        <input id="new_login_input" class="app_input_ok input_style create_fileName_input" type=text placeholder="new login" autocomplete="off">
+      </div>
+
+      <div style="position: absolute; top: 90px; left: 0px; right: 0px; text-align: center;">
+        <p style="width: 100%;">The login can only be made up of Latin alphabet characters and numbers.</p>
+      </div>
+
+      <div class="round_button dialog_button block_select" style="left: 10px; bottom: 10px; width: 100px;" onclick="change_login()">
+        <p style="margin: 5px 28px">change</p>
+      </div>
+    </div>
+
+    <!-- Изменение пароля -->
+    <div id="dialog_change_password" class="dialog_style" style="height: 245px;">
+      <div class="dialog_top_name">
+        <div class="dialog_close_button block_select button_margin" onclick="close_change_password_dialog()">
+          <img class="icon" width="20" height="20" src="static/img/cross.svg">
+          <p>close</p>
+        </div>
+      </div>
+
+      <div id="old_pass_div" class="app_input_ok input_text" style="left: 15px; top: 45px; right: 15px;">
+        <p>current:</p>
+        <input id="old_pass_input" style="left: 60px;" class="input_style create_fileName_input" type=password placeholder="..." autocomplete="off">
+      </div>
+
+      <div id="new_pass_div" class="app_input_ok input_text" style="left: 15px; top: 90px; right: 15px;">
+        <p>new:</p>
+        <input id="new_pass_input" style="left: 60px;" class="input_style create_fileName_input" type=password placeholder="..." autocomplete="off">
+      </div>
+
+      <div id="new_pass_repeat_div" class="app_input_ok input_text" style="left: 15px; top: 125px; right: 15px;">
+        <p>repeat:</p>
+        <input id="new_pass_repeat_input" style="left: 60px;" class="input_style create_fileName_input" type=password placeholder="..." autocomplete="off">
+      </div>
+
+      <div style="position: absolute; top: 150px; left: 0px; right: 0px; text-align: center;">
+        <p style="width: 100%;">The length of the new password must be at least 4 characters</p>
+      </div>
+
+      <!-- <div style="position: absolute; top: 160px; left: 0px; right: 0px; text-align: center;">
+        <p style="width: 100%;">After changing the password, you will need to re-log in to your account</p>
+      </div> -->
+
+      <div class="round_button dialog_button block_select" style="left: 10px; bottom: 10px; width: 100px;" onclick="change_password()">
+        <p style="margin: 5px 28px">change</p>
+      </div>
+    </div>
 
     <!-- окно приложения -->
     <div id="dialog_main_app" class="main_app_dialog" style="">
