--- a/app/static/css/main.1.css
+++ b/app/static/css/main.1.css
@@ -335,6 +335,28 @@ body {
 
 /*----------------------------------------------------------------------------*/
 
+.input_text {
+  position: absolute;
+  color: var(--main-font-color);
+  border: 1px solid var(--main-border-color);
+  background-color: var(--bg-color);
+  border-radius: 5px;
+  height: 30px;
+  background-color: var(--hover-color)
+}
+
+.input_text p {
+  margin: 3px 10px;
+}
+
+.input_text input {
+  margin-top: -10px;
+  right: 1px;
+  border: none
+}
+
+/*----------------------------------------------------------------------------*/
+
 .folder_filter {
   filter: invert(66%) sepia(17%) saturate(883%) hue-rotate(357deg) brightness(95%) contrast(96%);
 }
