--- a/app/static/css/file.1.css
+++ b/app/static/css/file.1.css
@@ -105,6 +105,10 @@
   width: 100%;
 }
 
+.file_pathInfo p {
+  color: var(--color-hide-font);
+}
+
 .file_delimiter_bg {
   position: absolute;
   width: 40px;
