--- a/app/templates/editor.html
+++ b/app/templates/editor.html
@@ -104,6 +104,7 @@
         <option value="text/x-csrc">C</option>
         <option value="text/x-c++src">C++</option>
         <option value="text/x-java">Java</option>
+        <option value="text/x-common-lisp">CLisp</option>
         <!-- <option value="clike">C-Like</option> -->
       </select>
     </div>
