--- a/disk/templates/admin.html
+++ b/disk/templates/admin.html
@@ -306,12 +306,13 @@
           <h2>Settings</h2>
         </div>
         <hr class="main_page_hr">
-        <div class="main_page_button" style="width: 155px; margin: 10px" onclick="open_alert_reboot_script()">
+        <!-- <div id="reboot_button" class="main_page_button" style="width: 155px; margin: 10px" onclick="open_alert_reboot_script()">
           <img style="margin: 5px 5px" class="icon" width="20" height="20" src="static/img/refresh.svg">
           <p style="margin: -25px 35px">reboot server</p>
-        </div>
+        </div> -->
 
-        <div class="main_page_button" style="width: 155px; margin: 10px; right: 0px; top: 54px; position: absolute;" onclick="save_settings()">
+        <!-- width: 155px; margin: 10px; right: 0px; top: 54px; position: absolute; -->
+        <div class="main_page_button" style="width: 155px; margin: 10px" onclick="save_settings()">
           <img style="margin: 5px 5px" class="icon" width="20" height="20" src="static/img/admin/save.svg">
           <p style="margin: -25px 35px">save settings</p>
         </div>
