настройка приложений в панели

--- a/disk/static/css/mobile/dialog.1.css
+++ b/disk/static/css/mobile/dialog.1.css
@@ -85,6 +85,10 @@
   border-bottom: 1px solid var(--main-border-color);
 }
 
+.dialog_input {
+  background-color: var(--main-input-color);
+}
+
 .create_fileName_input {
   position: absolute;
 
