не костыль, а прям уже инвалидная коляска

--- a/disk/templates/main.html
+++ b/disk/templates/main.html
@@ -637,7 +637,7 @@
 
     </div>
 
-    <input name="fileElem" type="file" id="fileElem" style="display: none;" multiple onchange="uploadFile(this.files)">
+    <input name="fileElem" type="file" id="fileElem" style="display: none;" multiple onchange="uploadFileNODD(this.files)">
 
   </body>
 
