--- a/disk/templates/m-main.html
+++ b/disk/templates/m-main.html
@@ -593,7 +593,7 @@
       </div>
     </div>
 
-    <input name="fileElem" type="file" id="fileElem" style="display: none;" multiple onchange="uploadFile(this.files)">
+    <input name="fileElem" type="file" id="fileElem" style="display: none;" multiple onchange="uploadFileNODD(this.files)">
 
   </body>
 
