--- a/disk/templates/admin.html
+++ b/disk/templates/admin.html
@@ -342,7 +342,7 @@
     </div> -->
 
     <!--alert-->
-    <div id="alert_bg" class="alert_bg"></div>
+    <div id="alert_bg" class="alert_bg" onclick="close_alert()"></div>
     <div id="alert" class="alert">
       <div class="alert_top_name">
         <div class="alert_close_button block_select button_margin" onclick="close_alert()">
