--- a/disk/static/css/file.1.css
+++ b/disk/static/css/file.1.css
@@ -103,6 +103,7 @@
   background-color: var(--fileList-checkbox-color);
   height: 20px;
   width: 100%;
+  color: var(--main-font-color);
 }
 
 .file_pathInfo p {
@@ -115,4 +116,25 @@
   height: 20px;
   background-color: var(--fileList-delimiter-color);
   border-right: 3px solid var(--fileList-checkbox-delimiter-color);
+}
+
+/*----------------------------------------------------------------------------*/
+
+.file_sort_selector {
+  /* height: 38px; */
+  height: 100%;
+  border: none;
+  background-color: var(--fileList-checkbox-color);
+  cursor: pointer;
+  color: var(--main-font-color);
+  border-radius: none;
+  clip-path: None;
+}
+
+.file_sort_selector:focus {
+  outline: none;
+}
+
+.file_sort_selector:hover {
+  background-color: var(--hover-color);
 }
